--- a/build.xml
+++ b/build.xml
@@ -1,6 +1,7 @@
 <project name="AntTest" basedir="." default="main">
 
-    <property name="src.dir" value="src"/>
+    <property name="src.dir" value="src/main/java"/>
+    <property name="resource.dir" value="src/main/resources"/>
 
     <property name="build.dir" value="target"/>
     <property name="classes.dir" value="${build.dir}/classes"/>
@@ -23,6 +24,9 @@
     <target name="compile">
         <mkdir dir="${classes.dir}"/>
         <javac srcdir="${src.dir}" destdir="${classes.dir}" includeantruntime="false" classpathref="classpath"/>
+        <copy todir="${classes.dir}">
+            <fileset dir="${resource.dir}" excludes="**/*.java"/>
+        </copy>
     </target>
 
     <target name="get-deps"
