--- a/build.xml
+++ b/build.xml
@@ -1,4 +1,5 @@
-<project name="AntTest" basedir="." default="main">
+<project name="AntTest" basedir="." default="main" xmlns:if="ant:if"
+         xmlns:unless="ant:unless">
 
     <property name="src.dir" value="src/main/java"/>
     <property name="test.src.dir" value="src/test/java"/>
@@ -14,7 +15,7 @@
     <property name="build.test.resource.dir" value="{build.dir}/test-resources"/>
     <property name="test.jar.dir" value="${build.dir}/test-jar"/>
 
-    <property name="main-class" value="net.codingdemon.Main"/>
+    <property name="main.class" value="net.codingdemon.Main"/>
 
     <property name="lib.dir" value="lib"/>
     <property name="test.lib.dir" value="test-lib"/>
@@ -117,16 +118,18 @@
         <mkdir dir="${jar.dir}"/>
         <jar destfile="${jar.dir}/${ant.project.name}.jar" basedir="${classes.dir}">
             <manifest>
-                <attribute name="Main-Class" value="${main-class}"/>
+                <attribute name="Main-Class" value="${main.class}"/>
             </manifest>
         </jar>
     </target>
 
     <target name="run" depends="compile">
-        <java fork="true" classname="${main-class}">
+        <java fork="true" classname="${main.class}">
             <classpath>
                 <path refid="app.path"/>
             </classpath>
+            <arg line="${args}" if:set="args"/>
+            <jvmarg line="${jvmArgs}" if:set="jvmArgs"/>
         </java>
     </target>
 
