--- a/build.xml
+++ b/build.xml
@@ -1,4 +1,4 @@
-<project name="AntTest" basedir="." default="main" xmlns:if="ant:if"
+<project xmlns:ivy="antlib:org.apache.ivy.ant" name="ant-test" basedir="." default="" xmlns:if="ant:if"
          xmlns:unless="ant:unless">
 
     <property name="src.dir" value="src/main/java"/>
@@ -8,17 +8,17 @@
 
     <property name="build.dir" value="target"/>
     <property name="classes.dir" value="${build.dir}/classes"/>
-    <property name="build.resource.dir" value="{build.dir/resources"/>
+    <property name="build.resource.dir" value="${build.dir}/resources"/>
     <property name="jar.dir" value="${build.dir}/jar"/>
 
     <property name="test.classes.dir" value="${build.dir}/test-classes"/>
-    <property name="build.test.resource.dir" value="{build.dir}/test-resources"/>
+    <property name="build.test.resource.dir" value="${build.dir}/test-resources"/>
     <property name="test.jar.dir" value="${build.dir}/test-jar"/>
 
     <property name="main.class" value="net.codingdemon.Main"/>
 
     <property name="lib.dir" value="lib"/>
-    <property name="test.lib.dir" value="test-lib"/>
+    <property name="test.lib.dir" value="lib"/>
 
     <path id="lib.path">
         <fileset dir="${lib.dir}" includes="**/*.jar"/>
@@ -64,15 +64,49 @@
         </path>
     </path>
 
-    <echo message="classpath: ${toString:lib.path}"/>
+<!--    <echo message="classpath: ${toString:lib.path}"/>-->
 <!--    <echo message="test.classpath: ${toString:test.classpath}"/>-->
 <!--    <echo message="app.test.classpath: ${toString:app.test.classpath}"/>-->
+
+<!--  BEGIN GET IVY on my machine -->
+    <property name="ivy.install.version" value="2.5.2"/>
+    <condition property="ivy.home" value="${env.IVY_HOME}">
+        <isset property="env.IVY_HOME"/>
+    </condition>
+    <property name="ivy.home" value="${user.home}/.ant"/>
+    <property name="ivy.jar.dir" value="${ivy.home}/lib"/>
+    <property name="ivy.jar.file" value="${ivy.jar.dir}/ivy.jar"/>
+
+    <target name="download-ivy">
+
+        <mkdir dir="${ivy.home}"/>
+        <mkdir dir="${ivy.jar.dir}"/>
+        <!-- download Ivy from web site so that it can be used even without any special installation -->
+        <get src="https://repo1.maven.org/maven2/org/apache/ivy/ivy/${ivy.install.version}/ivy-${ivy.install.version}.jar"
+             dest="${ivy.jar.file}" usetimestamp="true"/>
+    </target>
+
+    <target name="bootstrap" depends="init-ivy" />
+
+    <target name="init-ivy" depends="download-ivy">
+        <!-- try to load Ivy here from Ivy home, in case the user has not already dropped
+                it into Ant's lib dir (note that the latter copy will always take precedence).
+                We will not fail as long as local lib dir exists (it may be empty) and
+                Ivy is in at least one of Ant's lib dir or the local lib dir. -->
+        <path id="ivy.lib.path">
+            <fileset dir="${ivy.jar.dir}" includes="*.jar"/>
+
+        </path>
+        <!--    <taskdef resource="org/apache/ivy/ant/antlib.xml"-->
+        <!--             uri="antlib:org.apache.ivy.ant" classpathref="ivy.lib.path"/>-->
+    </target>
+<!-- END GET IVY -->
 
     <target name="clean">
         <delete dir="${build.dir}"/>
     </target>
 
-    <target name="compile">
+    <target name="compile" depends="resolve">
         <mkdir dir="${classes.dir}"/>
         <javac srcdir="${src.dir}" destdir="${classes.dir}" includeantruntime="false" classpathref="lib.path"/>
         <copy todir="${build.resource.dir}">
@@ -89,8 +123,9 @@
         </copy>
     </target>
 
-
-
+    <target name="resolve" description="--> retrieve dependencies with Ivy">
+        <ivy:retrieve />
+    </target>
 
     <target name="get-deps"
             description="Download all dependencies">
