adding a runpy task, but it is worse than running the python script diretly with python from commandline

--- a/build.xml
+++ b/build.xml
@@ -204,4 +204,10 @@
         </junit>
     </target>
 
+    <target name="runpy">
+        <exec executable="python" logError="true"  vmlauncher="false">
+            <arg value="${script.path}"/>
+            <arg line="${args}"/>
+        </exec>
+    </target>
 </project>
